--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 3000
-MONGO_URI = mongodb+srv://jmadhavi156:EUW9gSKMbW3VD95S@cluster0.p2t7bbk.mongodb.net/school?retryWrites=true&w=majority&appName=Cluster0
-ACCESS_SECRET = WELCOME
-REFRESH_SECRET = DOCTODF
+MONGO_URI = url
+ACCESS_SECRET = key
+REFRESH_SECRET = key
