--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/connect-mongo": "^3.1.3",
     "@types/dotenv": "^8.2.0",
+    "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.12",
     "@types/nodemon": "^1.19.6",
     "@types/pdfkit": "^0.13.4",
-    "@types/prettier": "^3.0.0",
-    "@types/yup": "^0.32.0",
     "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "nodemon": "^3.1.0",
@@ -32,8 +34,8 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/prettier": "^3.0.0",
+    "@types/yup": "^0.32.0"
   }
 }
-
-
