--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,6 @@
-PORT = 3000
 MONGO_URI = url
-ACCESS_SECRET = key
-REFRESH_SECRET = key
+PORT = 3000
+ACCESS_SECRET =  doctorrfsfrgjnfbvcwq
+REFRESH_SECRET = patienrtssewsdfdffgh
+SESSION_SECRET = eatyjthnerwecfhghfgh
+
