--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.12",
+    "@types/nodemailer": "^6.4.15",
     "@types/nodemon": "^1.19.6",
     "@types/pdfkit": "^0.13.4",
     "bcrypt": "^5.1.1",
@@ -26,6 +27,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pdfkit": "^0.15.0",
     "prettier": "^3.2.5",
