--- a/.env-sample
+++ b/.env-sample
@@ -4,3 +4,6 @@ ACCESS_SECRET =  doctorrfsfrgjnfbvcwq
 REFRESH_SECRET = patienrtssewsdfdffgh
 SESSION_SECRET = eatyjthnerwecfhghfgh
 
+
+EMAIL_USER=  mail 
+EMAIL_PASS=  passkey
