--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "student_management_system",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node index.ts"
+    "start": "nodemon --exec ts-node src/app.ts"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.12",
     "@types/nodemailer": "^6.4.15",
     "@types/nodemon": "^1.19.6",
@@ -27,6 +28,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pdfkit": "^0.15.0",
