--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/connect-mongo": "^3.1.3",
+    "@types/crypto-random-string": "^2.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
@@ -21,8 +22,10 @@
     "@types/nodemailer": "^6.4.15",
     "@types/nodemon": "^1.19.6",
     "@types/pdfkit": "^0.13.4",
+    "@types/randomstring": "^1.3.0",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
+    "crypto-random-string": "^5.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
@@ -33,6 +36,7 @@
     "nodemon": "^3.1.0",
     "pdfkit": "^0.15.0",
     "prettier": "^3.2.5",
+    "randomstring": "^1.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "yup": "^1.4.0"
